--- a/configure.ac
+++ b/configure.ac
@@ -775,7 +775,7 @@ plugins/notification/Makefile
 plugins/grilo/Makefile
 plugins/soundcloud/Makefile
 plugins/webremote/Makefile
-plugins/deezer/Makefile
+plugins/deezerpl/Makefile
 sample-plugins/Makefile
 sample-plugins/sample/Makefile
 sample-plugins/sample-python/Makefile
