--- a/plugins/deezerpl/Makefile.am
+++ b/plugins/deezerpl/Makefile.am
@@ -14,6 +14,8 @@ libdeezerpl_la_SOURCES = \
   rb-deezer-player.h \
   rb-deezer-entry-type.h \
   rb-deezer-entry-type.c \
+  rb-deezer-login.h \
+  rb-deezer-login.c \
   yuarel.c \
   yuarel.h
   
@@ -24,7 +26,6 @@ libdeezerpl_la_LIBADD = \
   $(DEEZER_LIBS) 
 
 AM_CPPFLAGS = \
-  -Wno-error=unused-function \
   -DGNOMELOCALEDIR=\""$(datadir)/locale"\" \
   -DG_LOG_DOMAIN=\"Rhythmbox\" \
   -I$(top_srcdir) \
@@ -42,14 +43,20 @@ AM_CPPFLAGS = \
   $(RHYTHMBOX_CFLAGS) \
   $(DEEZER_CFLAGS) \
   -D_DEFAULT_SOURCE \
-  -std=c11
+  -std=c11 \
+  -Wno-error=unused-function
 
 plugin_in_files = deezer.plugin.in
 %.plugin: %.plugin.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache
 
 plugin_DATA = $(plugin_in_files:.plugin.in=.plugin)
 
-EXTRA_DIST = $(plugin_in_files)
+gtkbuilderdir = $(plugindatadir)
+gtkbuilder_DATA =	# search-ui.ui	
+	
+
+EXTRA_DIST = $(plugin_in_files) \
+  $(gtkbuilder_DATA)
 
 CLEANFILES = $(plugin_DATA)
 DISTCLEANFILES = $(plugin_DATA)
