--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -228,3 +228,5 @@ widgets/rb-rating-helper.c
 widgets/rb-search-entry.c
 widgets/rb-song-info.c
 widgets/rb-uri-dialog.c
+plugins/deezerpl/rb-deezer-plugin.c
+plugins/deezerpl/rb-deezer-source.c
